added basic Bootstrap styling

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,8 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Insult</title>
   <script src="controllers/foaasControllers.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <style>
+    .well {margin-top: 100px;}
+  </style>
 </head>
 <body>
- {{{body}}}
+ <div class="container">
+   <div class="row">
+      <div class="col-sm-8 col-sm-offset-2 well"> 
+        {{{body}}}
+      </div>
+   </div> 
+ </div> 
 </body>
 </html>
